<resources>
    <string name="app_name">Nurse Project</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="menu">
        <item>Liste des patients</item>
        <item >Importer les patients</item>
        <item >Exporter les patients</item>
        <item >Importer les actes</item>
        <item >Afficher les actes</item>
        <item>Calendrier</item>
        <item>Test</item>
    </string-array>
    <string name="menu_list">Liste des patients</string>
    <string name="menu_import">Importer les patients</string>
    <string name="menu_export">Exporter les patients</string>
    <string name="title_activity_vuepatient">vuepatient</string>
    <string name="title_activity_affiche_liste_patient">AfficheListePatient</string>
    <string name="title_activity_modification_patient">ModificationPatient</string>
    <string name="title_activity_act_import">ActImport</string>
    <string name="title_activity_act_export">ActExport</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Rechercher</string>
    <string name="titre_login">Connection à Nurse Project</string>
    <string name="pseudo">Entrez votre pseudo</string>
    <string name="btn_pseudo">Se connecter</string>
    <string name="deco">Se déconnecter</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vueacte">vueacte</string>
    <string name="title_activity_test">test</string>
    <string name="action_today">Aujourd\'hui</string>
    <string name="action_day_view">Un jour</string>
    <string name="action_three_day_view">3 joursw</string>
    <string name="action_week_view">Semaine</string>
    <string name="title_activity_affiche_visite">Affichage Visite</string>
    <string name="action_maj">Mise à jour</string>
    <string name="title_activity_google_view">GoogleView</string>
    <string name="title_activity_login">login</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
</resources>
