<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/list"
        app:showAsAction="always"
        android:title="@string/menu_list"/>

    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/eimport"
        app:showAsAction="always"
        android:title="@string/menu_import"
        />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/export"
        app:showAsAction="always"
        android:title="@string/menu_export"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_websearch"
        android:icon="@mipmap/action_search"
        android:title="@string/action_websearch"
        android:showAsAction="ifRoom|withText" />
</menu>
